JFrog Reproducible Build JUnit4

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
     <version>4.14-SNAPSHOT</version>
-
     <name>JUnit</name>
     <description>JUnit is a unit testing framework for Java, created by Erich Gamma and Kent Beck.</description>
     <url>http://junit.org</url>
@@ -21,7 +19,6 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
     <developers>
         <developer>
             <id>dsaff</id>
@@ -99,16 +96,9 @@
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
         <arguments />
         <gpg.keyname>67893CC4</gpg.keyname>
-        <project.build.outputTimestamp>2020-10-03T20:00:00Z</project.build.outputTimestamp>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-artifact-plugin</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
@@ -595,4 +585,10 @@
             </reporting>
         </profile>
     </profiles>
+    <!-- JFROG_REPRODUCIBLE_BUILD_INJECTOR -->
+    <parent>
+        <groupId>org.jfrog.reproducible</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0</version>
+    </parent>
 </project>
